--- a/ipsum-in/index.html
+++ b/ipsum-in/index.html
@@ -6,21 +6,21 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 
-<title>ipsum in - Split - HTML Template Demo</title>
-<meta name="author" content="Jenny Jones" />
+<title>ipsum in - Liana Pshevorska</title>
+<meta name="author" content="Liana Pshevorska" />
 <meta name="description" content="Split is a centrally-divided layout for a professional online presence with a big image or video left with alongside content." />
 <meta name="robots" content="index, follow" />
 <meta name="referrer" content="always" />
 
 
-<meta property="og:title" content="ipsum in - Split - HTML Template Demo" />
+<meta property="og:title" content="ipsum in - Liana Pshevorska" />
 <meta property="og:description" content="Split is a centrally-divided layout for a professional online presence with a big image or video left with alongside content." />
 <meta property="og:url" content="https://pshevorska.github.io" />
 
 <meta property="og:image" content="https://pshevorska.github.io/images/social.jpg" />
 <meta name="twitter:card" content="summary_large_image" />
 
-<meta name="twitter:site" content="@onepagelove" />
+
 
 
 <link rel="icon" href="https://pshevorska.github.io/favicon.ico" />
@@ -79,7 +79,7 @@
 
         
         <div class="split-credit">
-  <p>&copy;2018 Your Name - <a href="https://onepagelove.com/split">Split Template</a> by <a href="https://onepagelove.com">One Page Love</a></p>
+  <p>&copy;2018 Liana Pshevorska - <a href="https://onepagelove.com/split">Split Template</a> by <a href="https://onepagelove.com">One Page Love</a></p>
 
   <!--
   To edit this credit you can remove the CC3.0 license for only $5 here: https://onepagelove.com/split
