--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 
 <meta property="og:title" content="Liana Pshevorska" />
 <meta property="og:description" content="Split is a centrally-divided layout for a professional online presence with a big image or video left with alongside content." />
-<meta property="og:url" content="https://pshevorska.github.io" />
+<meta property="og:url" content="https://lianapshevorska.com" />
 
-<meta property="og:image" content="https://pshevorska.github.io/images/social.jpg" />
+<meta property="og:image" content="https://lianapshevorska.com/images/social.jpg" />
 <meta name="twitter:card" content="summary_large_image" />
 
 
 
 
-<link rel="icon" href="https://pshevorska.github.io/favicon.ico" />
+<link rel="icon" href="https://lianapshevorska.com/favicon.ico" />
 
 
-<link rel="stylesheet" href="https://pshevorska.github.io/assets/css/split.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="https://lianapshevorska.com/assets/css/split.css" type="text/css" media="screen" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 
 
 
   <style type="text/css">
   
-    .fs-split .split-image { background-image: url("https://pshevorska.github.io/images/background.jpg"); background-position: center center; }
+    .fs-split .split-image { background-image: url("https://lianapshevorska.com/images/background.jpg"); background-position: center center; }
   
   </style>
 
@@ -64,7 +64,7 @@
         
         <div class="split-intro">
   <h1>Liana Pshevorska</h1>
-  <span class="tagline">Designer. Stylist. Nomad.</span>
+  <span class="tagline">Liana Pshevorska</span>
 </div>
 
 
@@ -72,7 +72,7 @@
         
   
   <div class="split-bio">
-  <p>Donec at libero id lectus porta dapibus eu in nibh. Cras id mauris sapien. Fusce viverra <a href="https://pshevorska.github.io/luctus-urna/">luctus urna</a> ac rutrum. Duis semper elit eu mi facilisis eleifend. Donec semper, <a href="https://pshevorska.github.io/ipsum-in/">ipsum in</a> malesuada congue, <a href="https://pshevorska.github.io/purus-sem/">purus sem</a> ullamcorper massa, sit amet lacinia nibh enim sed massa.</p>
+  <p>Donec at libero id lectus porta dapibus eu in nibh. Cras id mauris sapien. Fusce viverra <a href="https://lianapshevorska.com/luctus-urna/">luctus urna</a> ac rutrum. Duis semper elit eu mi facilisis eleifend. Donec semper, <a href="https://lianapshevorska.com/ipsum-in/">ipsum in</a> malesuada congue, <a href="https://lianapshevorska.com/purus-sem/">purus sem</a> ullamcorper massa, sit amet lacinia nibh enim sed massa.</p>
 
 </div>
 
