--- a/luctus-urna/index.html
+++ b/luctus-urna/index.html
@@ -15,25 +15,25 @@
 
 <meta property="og:title" content="luctus urna - Liana Pshevorska" />
 <meta property="og:description" content="Split is a centrally-divided layout for a professional online presence with a big image or video left with alongside content." />
-<meta property="og:url" content="https://pshevorska.github.io" />
+<meta property="og:url" content="https://lianapshevorska.com" />
 
-<meta property="og:image" content="https://pshevorska.github.io/images/social.jpg" />
+<meta property="og:image" content="https://lianapshevorska.com/images/social.jpg" />
 <meta name="twitter:card" content="summary_large_image" />
 
 
 
 
-<link rel="icon" href="https://pshevorska.github.io/favicon.ico" />
+<link rel="icon" href="https://lianapshevorska.com/favicon.ico" />
 
 
-<link rel="stylesheet" href="https://pshevorska.github.io/assets/css/split.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="https://lianapshevorska.com/assets/css/split.css" type="text/css" media="screen" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 
 
 
   <style type="text/css">
   
-    .fs-split .split-image { background-image: url("https://pshevorska.github.io/images/background.jpg"); background-position: center center; }
+    .fs-split .split-image { background-image: url("https://lianapshevorska.com/images/background.jpg"); background-position: center center; }
   
   </style>
 
